--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
-    "$schema": "https://opencode.ai/config.json",
-    "provider": {
-    }
+  "$schema": "https://opencode.ai/config.json",
+  "plugin": ["opencode-gemini-auth@latest"],
+  "provider": {}
 }
-
