--- a/config.json
+++ b/config.json
@@ -1,5 +1,11 @@
 {
   "$schema": "https://opencode.ai/config.json",
   "plugin": ["opencode-gemini-auth@latest"],
-  "provider": {}
+  "provider": {},
+  "mcp": {
+    "alpha_vantage": {
+      "type": "remote",
+      "url": "https://mcp.alphavantage.co/mcp?api_key={env:ALPHA_VANTAGE_API_KEY}",
+    }
+  }
 }
