--- a/config.json
+++ b/config.json
@@ -7,6 +7,19 @@
       "enabled": false,
       "type": "local",
       "command": ["uvx", "av-mcp", "{ENV:ALPHA_VANTAGE_API_KEY}"]
+    },
+    "playwright": {
+      "enabled": false,
+      "type": "local",
+      "command": ["uvx", "@playwright/mcp@latest"]
+    },
+    "helm_afhub": {
+      "enabled": false,
+      "type": "local",
+      "command": ["uvx", "helm-package-readme-mcp-server"],
+      "environment": {
+        "GITHUB_TOKEN": "{ENV:GITHUB_TOKEN}"
+      }
     }
   }
 }
