--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -1,29 +1,29 @@
 {
   "$schema": "https://opencode.ai/config.json",
   "plugin": [
-    "opencode-gemini-auth@latest",
-    "opencode-anthropic-auth@0.0.7",
-    "opencode-openai-codex-auth"
+    "opencode-gemini-auth",
+    "opencode-anthropic-auth",
+    "opencode-openai-codex-auth",
   ],
   "provider": {},
   "mcp": {
     "av_local": {
       "enabled": false,
       "type": "local",
-      "command": ["uvx", "av-mcp", "{ENV:ALPHA_VANTAGE_API_KEY}"]
+      "command": ["uvx", "av-mcp", "{ENV:ALPHA_VANTAGE_API_KEY}"],
     },
     "playwright": {
       "enabled": false,
       "type": "local",
-      "command": ["npx", "@playwright/mcp@latest"]
+      "command": ["npx", "@playwright/mcp@latest"],
     },
     "helm_afhub": {
       "enabled": false,
       "type": "local",
       "command": ["npx", "helm-package-readme-mcp-server"],
       "environment": {
-        "GITHUB_TOKEN": "{ENV:GITHUB_TOKEN}"
-      }
-    }
-  }
+        "GITHUB_TOKEN": "{ENV:GITHUB_TOKEN}",
+      },
+    },
+  },
 }
